--- a/www/index.html
+++ b/www/index.html
@@ -16,10 +16,10 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-</head>
+<link rel="stylesheet" href="styles.5211b10d863687fb85f8.css"></head>
 
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.js" type="module"></script><script src="polyfills-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule></script><script src="polyfills-es5.js" nomodule></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule></script><script src="cordova.js"></script><script src="vendor-es2015.js" type="module"></script><script src="main-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule></script><script src="main-es5.js" nomodule></script></body>
+<script src="runtime-es2015.18e79358513a9d8e1d64.js" type="module"></script><script src="polyfills-es2015.fef1080417e6cf321cb1.js" type="module"></script><script src="runtime-es5.3ccfc51d2380e4d18e14.js" nomodule></script><script src="polyfills-es5.205a9ee245ef42486158.js" nomodule></script><script src="cordova.22d0b106f4dfd80eb9b7.js"></script><script src="main-es2015.e2827d83fb9008a068c0.js" type="module"></script><script src="main-es5.6778acf0e170216a1923.js" nomodule></script></body>
 
 </html>
